task 12 - fixed footer on mobile resolution

--- a/task_12/style/css/main.css
+++ b/task_12/style/css/main.css
@@ -305,6 +305,18 @@ table {
   text-decoration: underline;
   color: #d2d2d2;
 }
+@media screen and (max-width: 800px), (min-resolution: 270dpi) {
+  /* line 17, ../sass/footer.sass */
+  .footer span:nth-child(2) {
+    margin-top: 1em;
+  }
+}
+@media screen and (max-width: 800px), (min-resolution: 270dpi) {
+  /* line 1, ../sass/footer.sass */
+  .footer {
+    flex-direction: column;
+  }
+}
 
 /* line 1, ../sass/buttons.sass */
 .button {
