--- a/task_12/style/sass/footer.sass
+++ b/task_12/style/sass/footer.sass
@@ -12,4 +12,12 @@
         text-decoration: none 
         &:hover
             text-decoration: underline
-            color: #d2d2d2 
+            color: #d2d2d2
+    span
+        &:nth-child(2) 
+            @media screen and (max-width: 800px),(min-resolution:270dpi)
+                margin-top: 1em        
+    @media screen and (max-width: 800px),(min-resolution:270dpi)
+        flex-direction: column        
+
+ 
